Blender 2.83 will crash while rendering with amd rx 590 and hidding the meshes #77984

Closed
opened 2020-06-18 04:21:05 +02:00 by Arturo Rangel · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Radeon RX 590 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.5.1 27.20.1017.1011

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender 2.83 will crash while being on render view and hidding mesh.

Exact steps for others to reproduce the error
1.- Enable OpenCl and enable the amd card.
2.- On the viewport go to render view.
3.- While being on render view, just go to the "view object types" menu and hide Mesh, blender will crash.

This will also happen on 2.82, but the viewport will just get corrupted and can be restored, also con 2.90 with an opencl error.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Radeon RX 590 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.5.1 27.20.1017.1011 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender 2.83 will crash while being on render view and hidding mesh. **Exact steps for others to reproduce the error** 1.- Enable OpenCl and enable the amd card. 2.- On the viewport go to render view. 3.- While being on render view, just go to the "view object types" menu and hide Mesh, blender will crash. This will also happen on 2.82, but the viewport will just get corrupted and can be restored, also con 2.90 with an opencl error.

Added subscriber: @AranMoreno

Added subscriber: @AranMoreno
Arturo Rangel changed title from Blender will crash while rendering with amd gpu and hidding the meshes to Blender 2.83 will crash while rendering with amd gpu and hidding the meshes 2020-06-18 04:21:23 +02:00
Arturo Rangel changed title from Blender 2.83 will crash while rendering with amd gpu and hidding the meshes to Blender 2.83 will crash while rendering with amd rx 590 and hidding the meshes 2020-06-18 04:28:13 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the crash on:
Operating system: Windows-10-10.0.18941 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.19.02 27.20.1019.2002

Exception thrown at 0x00007FF87ACB4259 (amdocl64.dll) in blender.exe: 0xC0000005: Access violation reading location 0x000000C1FFFFFFF0.
 	amdocl64.dll!00007ff87acb4259()	Unknown
>	blender.exe!ccl::OpenCLDevice::kernel_set_args(_cl_kernel * kernel, int start_argument_index, const ccl::OpenCLDevice::ArgumentWrapper & arg1, const ccl::OpenCLDevice::ArgumentWrapper & arg2, const ccl::OpenCLDevice::ArgumentWrapper & arg3, const ccl::OpenCLDevice::ArgumentWrapper & arg4, const ccl::OpenCLDevice::ArgumentWrapper & arg5, const ccl::OpenCLDevice::ArgumentWrapper & arg6, const ccl::OpenCLDevice::ArgumentWrapper & arg7, const ccl::OpenCLDevice::ArgumentWrapper & arg8, const ccl::OpenCLDevice::ArgumentWrapper & arg9, const ccl::OpenCLDevice::ArgumentWrapper & arg10, const ccl::OpenCLDevice::ArgumentWrapper & arg11, const ccl::OpenCLDevice::ArgumentWrapper & arg12, const ccl::OpenCLDevice::ArgumentWrapper & arg13, const ccl::OpenCLDevice::ArgumentWrapper & arg14, const ccl::OpenCLDevice::ArgumentWrapper & arg15, const ccl::OpenCLDevice::ArgumentWrapper & arg16, const ccl::OpenCLDevice::ArgumentWrapper & arg17, const ccl::OpenCLDevice::ArgumentWrapper & arg18, const ccl::OpenCLDevice::ArgumentWrapper & arg19, const ccl::OpenCLDevice::ArgumentWrapper & arg20, const ccl::OpenCLDevice::ArgumentWrapper & arg21, const ccl::OpenCLDevice::ArgumentWrapper & arg22, const ccl::OpenCLDevice::ArgumentWrapper & arg23, const ccl::OpenCLDevice::ArgumentWrapper & arg24, const ccl::OpenCLDevice::ArgumentWrapper & arg25, const ccl::OpenCLDevice::ArgumentWrapper & arg26, const ccl::OpenCLDevice::ArgumentWrapper & arg27, const ccl::OpenCLDevice::ArgumentWrapper & arg28, const ccl::OpenCLDevice::ArgumentWrapper & arg29, const ccl::OpenCLDevice::ArgumentWrapper & arg30, const ccl::OpenCLDevice::ArgumentWrapper & arg31, const ccl::OpenCLDevice::ArgumentWrapper & arg32, const ccl::OpenCLDevice::ArgumentWrapper & arg33) Line 2067	C++

 	blender.exe!ccl::MemoryManager::set_kernel_arg_buffers(_cl_kernel * kernel, unsigned int * narg) Line 249	C++
 	blender.exe!ccl::OpenCLSplitKernel::enqueue_split_kernel_data_init(const ccl::KernelDimensions & dim, ccl::RenderTile & rtile, int num_global_elements, ccl::device_memory & kernel_globals, ccl::device_memory & kernel_data, ccl::device_memory & split_data, ccl::device_memory & ray_state, ccl::device_memory & queue_index, ccl::device_memory & use_queues_flag, ccl::device_memory & work_pool_wgs) Line 490	C++
 	blender.exe!ccl::DeviceSplitKernel::path_trace(ccl::DeviceTask * task, ccl::RenderTile & tile, ccl::device_memory & kgbuffer, ccl::device_memory & kernel_data) Line 245	C++
 	blender.exe!ccl::OpenCLDevice::thread_run(ccl::DeviceTask * task) Line 1357	C++
 	[External Code]	
 	[Inline Frame] blender.exe!std::_Func_class<void,int>::operator()(int <_Args_0>) Line 958	C++
 	blender.exe!ccl::DedicatedTaskPool::thread_run() Line 566	C++
 	[External Code]	
 	[Inline Frame] blender.exe!std::_Func_class<void>::operator()() Line 958	C++
 	blender.exe!ccl::thread::run(void * arg) Line 53	C++
 	[External Code]	
I can confirm the crash on: **Operating system:** Windows-10-10.0.18941 64 Bits **Graphics card:** Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.19.02 27.20.1019.2002 ``` Exception thrown at 0x00007FF87ACB4259 (amdocl64.dll) in blender.exe: 0xC0000005: Access violation reading location 0x000000C1FFFFFFF0. ``` ```lines amdocl64.dll!00007ff87acb4259() Unknown > blender.exe!ccl::OpenCLDevice::kernel_set_args(_cl_kernel * kernel, int start_argument_index, const ccl::OpenCLDevice::ArgumentWrapper & arg1, const ccl::OpenCLDevice::ArgumentWrapper & arg2, const ccl::OpenCLDevice::ArgumentWrapper & arg3, const ccl::OpenCLDevice::ArgumentWrapper & arg4, const ccl::OpenCLDevice::ArgumentWrapper & arg5, const ccl::OpenCLDevice::ArgumentWrapper & arg6, const ccl::OpenCLDevice::ArgumentWrapper & arg7, const ccl::OpenCLDevice::ArgumentWrapper & arg8, const ccl::OpenCLDevice::ArgumentWrapper & arg9, const ccl::OpenCLDevice::ArgumentWrapper & arg10, const ccl::OpenCLDevice::ArgumentWrapper & arg11, const ccl::OpenCLDevice::ArgumentWrapper & arg12, const ccl::OpenCLDevice::ArgumentWrapper & arg13, const ccl::OpenCLDevice::ArgumentWrapper & arg14, const ccl::OpenCLDevice::ArgumentWrapper & arg15, const ccl::OpenCLDevice::ArgumentWrapper & arg16, const ccl::OpenCLDevice::ArgumentWrapper & arg17, const ccl::OpenCLDevice::ArgumentWrapper & arg18, const ccl::OpenCLDevice::ArgumentWrapper & arg19, const ccl::OpenCLDevice::ArgumentWrapper & arg20, const ccl::OpenCLDevice::ArgumentWrapper & arg21, const ccl::OpenCLDevice::ArgumentWrapper & arg22, const ccl::OpenCLDevice::ArgumentWrapper & arg23, const ccl::OpenCLDevice::ArgumentWrapper & arg24, const ccl::OpenCLDevice::ArgumentWrapper & arg25, const ccl::OpenCLDevice::ArgumentWrapper & arg26, const ccl::OpenCLDevice::ArgumentWrapper & arg27, const ccl::OpenCLDevice::ArgumentWrapper & arg28, const ccl::OpenCLDevice::ArgumentWrapper & arg29, const ccl::OpenCLDevice::ArgumentWrapper & arg30, const ccl::OpenCLDevice::ArgumentWrapper & arg31, const ccl::OpenCLDevice::ArgumentWrapper & arg32, const ccl::OpenCLDevice::ArgumentWrapper & arg33) Line 2067 C++ blender.exe!ccl::MemoryManager::set_kernel_arg_buffers(_cl_kernel * kernel, unsigned int * narg) Line 249 C++ blender.exe!ccl::OpenCLSplitKernel::enqueue_split_kernel_data_init(const ccl::KernelDimensions & dim, ccl::RenderTile & rtile, int num_global_elements, ccl::device_memory & kernel_globals, ccl::device_memory & kernel_data, ccl::device_memory & split_data, ccl::device_memory & ray_state, ccl::device_memory & queue_index, ccl::device_memory & use_queues_flag, ccl::device_memory & work_pool_wgs) Line 490 C++ blender.exe!ccl::DeviceSplitKernel::path_trace(ccl::DeviceTask * task, ccl::RenderTile & tile, ccl::device_memory & kgbuffer, ccl::device_memory & kernel_data) Line 245 C++ blender.exe!ccl::OpenCLDevice::thread_run(ccl::DeviceTask * task) Line 1357 C++ [External Code] [Inline Frame] blender.exe!std::_Func_class<void,int>::operator()(int <_Args_0>) Line 958 C++ blender.exe!ccl::DedicatedTaskPool::thread_run() Line 566 C++ [External Code] [Inline Frame] blender.exe!std::_Func_class<void>::operator()() Line 958 C++ blender.exe!ccl::thread::run(void * arg) Line 53 C++ [External Code] ```

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares

this also happens if the object is deleted

this also happens if the object is deleted

This issue was referenced by blender/cycles@f1f01c2fe5

This issue was referenced by blender/cycles@f1f01c2fe524babe728f042698b9b8c0ddbc17a8

This issue was referenced by 080d62d405

This issue was referenced by 080d62d4057b53a8d7c0aa917f61831a5195e0d7

This issue was referenced by 792cb8bdc7

This issue was referenced by 792cb8bdc7f5d9432c89750d7a09e797137a6a00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-07-01 20:02:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77984
There is no content yet.