Fix T77984: Cycles OpenCL error rendering empty scene